--- a/WSSQLGUI/WSSQLGUI.csproj
+++ b/WSSQLGUI/WSSQLGUI.csproj
@@ -52,12 +52,6 @@
     <ApplicationIcon>Search.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ICSharpCode.SharpZipLib, Version=0.85.2.329, Culture=neutral, PublicKeyToken=1b03e6acf1164f73, processorArchitecture=MSIL">
-      <HintPath>..\Toolkits\ZipLib\ICSharpCode.SharpZipLib.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Ink, Version=1.7.2600.2180, Culture=neutral, PublicKeyToken=31bf3856ad364e35">
-      <HintPath>..\Toolkits\Microsoft\Microsoft.Ink.dll</HintPath>
-    </Reference>
     <Reference Include="MVCSharp">
       <HintPath>..\Toolkits\MVCSharp\MVCSharp.dll</HintPath>
     </Reference>
@@ -77,6 +71,7 @@
     <Compile Include="Controllers\MainTask.cs" />
     <Compile Include="Controllers\SearchController.cs" />
     <Compile Include="Logic.cs" />
+    <Compile Include="Services\FileService.cs" />
     <Compile Include="Views\SearchForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -84,57 +79,11 @@
       <DependentUpon>SearchForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\SearchItem.cs" />
-    <Compile Include="PreviewHandlerFramework\COMInterop\COLORREF.cs" />
-    <Compile Include="PreviewHandlerFramework\COMInterop\IInitializeWithFile.cs" />
-    <Compile Include="PreviewHandlerFramework\COMInterop\IInitializeWithStream.cs" />
-    <Compile Include="PreviewHandlerFramework\COMInterop\IObjectWithSite.cs" />
-    <Compile Include="PreviewHandlerFramework\COMInterop\IOleWindow.cs" />
-    <Compile Include="PreviewHandlerFramework\COMInterop\IPreviewHandler.cs" />
-    <Compile Include="PreviewHandlerFramework\COMInterop\IPreviewHandlerFrame.cs" />
-    <Compile Include="PreviewHandlerFramework\COMInterop\IPreviewHandlerVisuals.cs" />
-    <Compile Include="PreviewHandlerFramework\COMInterop\LOGFONT.cs" />
-    <Compile Include="PreviewHandlerFramework\COMInterop\MSG.cs" />
-    <Compile Include="PreviewHandlerFramework\COMInterop\RECT.cs" />
-    <Compile Include="PreviewHandlerFramework\FileBasedPreviewHandler.cs" />
-    <Compile Include="PreviewHandlerFramework\FileBasedPreviewHandlerControl.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="PreviewHandlerFramework\PreviewHandler.cs" />
-    <Compile Include="PreviewHandlerFramework\PreviewHandlerAttribute.cs" />
-    <Compile Include="PreviewHandlerFramework\PreviewHandlerControl.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="PreviewHandlerFramework\StreamBasedPreviewHandler.cs" />
-    <Compile Include="PreviewHandlerFramework\StreamBasedPreviewHandlerControl.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="PreviewHandlerHost\PreviewHandlerHostControl.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="PreviewHandlerHost\PreviewHandlerHostControl.designer.cs">
-      <DependentUpon>PreviewHandlerHostControl.cs</DependentUpon>
-    </Compile>
-    <Compile Include="PreviewHandlerHost\PreviewHandlerRegistryAccessor.cs" />
-    <Compile Include="PreviewHandlerHost\StreamWrapper.cs" />
-    <Compile Include="PreviewHandlers\BinPreviewHandler.cs" />
-    <Compile Include="PreviewHandlers\CsvPreviewHandler.cs" />
-    <Compile Include="PreviewHandlers\FileTypeIconProvider.cs" />
-    <Compile Include="PreviewHandlers\InternetExplorerPreviewHandler.cs" />
-    <Compile Include="PreviewHandlers\IsfPreviewHandler.cs" />
-    <Compile Include="PreviewHandlers\MsiPreviewHandler.cs" />
-    <Compile Include="PreviewHandlers\PdfPreviewHandler.cs" />
-    <Compile Include="PreviewHandlers\ResourcesPreviewHandler.cs" />
-    <Compile Include="PreviewHandlers\ResxPreviewHandler.cs" />
-    <Compile Include="PreviewHandlers\SnkPreviewHandler.cs" />
-    <Compile Include="PreviewHandlers\ZipPreviewHandler.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\EventArgs.cs" />
     <EmbeddedResource Include="Views\SearchForm.resx">
       <DependentUpon>SearchForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="PreviewHandlerHost\PreviewHandlerHostControl.resx">
-      <DependentUpon>PreviewHandlerHostControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -146,8 +95,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <None Include="Properties\DataSources\WSSQLGUI.Models.ListSearchItems.datasource" />
-    <None Include="Properties\DataSources\WSSQLGUI.Models.SearchItem.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -186,7 +133,12 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\WSPreview\WSPreview.csproj">
+      <Project>{3E9F9F18-B9AD-4DDE-A5D6-F71B75C737D2}</Project>
+      <Name>WSPreview</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>xcopy $(SolutionDir)Toolkits\ZipLib\ICSharpCode.SharpZipLib.dll $(TargetDir) /F /R /Y /I
