--- a/WSSQLGUI/app.config
+++ b/WSSQLGUI/app.config
@@ -21,6 +21,8 @@
       <maxSizeRollBackups value="10" />
       <maximumFileSize value="5MB" />
       <layout type="log4net.Layout.PatternLayout">
+        <header value="[Start Application]&#13;&#10;" />
+        <footer value="[Finish Application]&#13;&#10;" />
         <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline" />
       </layout>
     </appender>
