--- a/WSSQLGUI/WSSQLGUI.csproj
+++ b/WSSQLGUI/WSSQLGUI.csproj
@@ -83,9 +83,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\AllFilesDataController.cs" />
+    <Compile Include="Controllers\AllFilesSettingsController.cs" />
+    <Compile Include="Controllers\EmailDataController.cs" />
+    <Compile Include="Controllers\EmailSettingsController.cs" />
     <Compile Include="Controllers\MainTask.cs" />
     <Compile Include="Controllers\SearchController.cs" />
+    <Compile Include="Core\BaseDataController.cs" />
+    <Compile Include="Core\BaseKindItemStrategy.cs" />
+    <Compile Include="Core\BaseSearchData.cs" />
+    <Compile Include="Core\BaseSettingsController.cs" />
+    <Compile Include="Core\IDataView.cs" />
+    <Compile Include="Core\IKindItem.cs" />
+    <Compile Include="Core\ISettingsView.cs" />
+    <Compile Include="Kinds\AllFilesStrategy.cs" />
+    <Compile Include="Kinds\ContactStrategy.cs" />
+    <Compile Include="Kinds\EmailStrategy.cs" />
     <Compile Include="Models\EmailData.cs" />
+    <Compile Include="Models\EmailSearchData.cs" />
     <Compile Include="Models\SearchData.cs" />
     <Compile Include="Services\Helpers\OutlookHelper.cs" />
     <Compile Include="Services\Helpers\SearchItemHelper.cs" />
@@ -94,6 +109,24 @@
     <Compile Include="Logic.cs" />
     <Compile Include="Services\FileService.cs" />
     <Compile Include="Services\Enums\TypeSearchItem.cs" />
+    <Compile Include="Views\AllFilesDataView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Views\AllFilesDataView.Designer.cs">
+      <DependentUpon>AllFilesDataView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\AllFilesSettingsView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Views\AllFilesSettingsView.Designer.cs">
+      <DependentUpon>AllFilesSettingsView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\EmailDataView.cs" />
+    <Compile Include="Views\EmailSettingsView.cs" />
+    <Compile Include="Views\IAllFilesDataView.cs" />
+    <Compile Include="Views\IAllFilesSettingsView.cs" />
+    <Compile Include="Views\IEmailDataView.cs" />
+    <Compile Include="Views\IEmailSettingsView.cs" />
     <Compile Include="Views\SearchForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -104,6 +137,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\EventArgs.cs" />
+    <EmbeddedResource Include="Views\AllFilesDataView.resx">
+      <DependentUpon>AllFilesDataView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\AllFilesSettingsView.resx">
+      <DependentUpon>AllFilesSettingsView.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\SearchForm.resx">
       <DependentUpon>SearchForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -166,6 +205,7 @@
       <Name>WSPreview</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>xcopy $(SolutionDir)Toolkits\ZipLib\ICSharpCode.SharpZipLib.dll $(TargetDir) /F /R /Y /I
