--- a/WSPreview/WSPreview.csproj
+++ b/WSPreview/WSPreview.csproj
@@ -73,6 +73,9 @@
     <Reference Include="PDFLibNet">
       <HintPath>..\Toolkits\PDFSharp\PDFLibNet.dll</HintPath>
     </Reference>
+    <Reference Include="ScintillaNET">
+      <HintPath>..\Toolkits\Scintilla\ScintillaNET.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Design" />
@@ -110,6 +113,12 @@
     </Compile>
     <Compile Include="Controls\PDFViewer.designer.cs">
       <DependentUpon>PDFViewer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\SourceViewer.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\SourceViewer.Designer.cs">
+      <DependentUpon>SourceViewer.cs</DependentUpon>
     </Compile>
     <Compile Include="HelperPreviewHandlers.cs" />
     <Compile Include="PInvoke\WindowAPI.cs" />
@@ -159,6 +168,7 @@
     <Compile Include="PreviewHandlers\ResourcesPreviewHandler.cs" />
     <Compile Include="PreviewHandlers\ResxPreviewHandler.cs" />
     <Compile Include="PreviewHandlers\SnkPreviewHandler.cs" />
+    <Compile Include="PreviewHandlers\SourcePreviewHandler.cs" />
     <Compile Include="PreviewHandlers\TxtPreviewHandler.cs" />
     <Compile Include="PreviewHandlers\ZipPreviewHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -226,6 +236,10 @@
     <None Include="Resources\tshadowtopright.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>
+    </PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
